--- a/index.html
+++ b/index.html
@@ -130,6 +130,132 @@
 			</div>
 		</div>
 		<!-- End hero -->
+
+		<!-- Category -->
+		<div class="section">
+			<div class="section-title">
+				<h3 class="second-title">bike category</h3>
+				<h3 class="main-title">choose your style</h3>
+			</div>
+			<div class="section-content">
+				<div class="row">
+					<div class="col-4">
+						<div class="category-img">
+							<div
+								class="category-img-inner"
+								style="
+									background-image: url(./images/alvan-nee-EHILKZNmTuA-unsplash.jpg);
+								"
+							></div>
+							<div class="category-title">Urban</div>
+						</div>
+					</div>
+					<div class="col-4">
+						<div class="category-img">
+							<div
+								class="category-img-inner"
+								style="
+									background-image: url(./images/eberhard-grossgasteiger-8lDkmXnKo7s-unsplash.jpg);
+								"
+							></div>
+							<div class="category-title">mountain</div>
+						</div>
+					</div>
+					<div class="col-4">
+						<div class="category-img">
+							<div
+								class="category-img-inner"
+								style="
+									background-image: url(./images/tom-austin-3L76b-LMyeI-unsplash.jpg);
+								"
+							></div>
+							<div class="category-title">Road</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!-- End Category -->
+
+		<!-- New arrivals section -->
+		<div class="section">
+			<div class="section-title">
+				<h3 class="second-title">new bikes</h3>
+				<h3 class="main-title">new arrivals</h3>
+				<div class="btn-wrapper">
+					<a href="#" class="btn">view all bikes</a>
+				</div>
+			</div>
+			<div class="section-content">
+				<div class="row">
+					<div class="col-5 col-center">
+						<div class="product-card product-card-large">
+							<a href="#">
+								<div class="product-card-img">
+									<img src="./images/Polygon Cascade.png" alt="" />
+								</div>
+								<h3 class="product-name">polygon cascade</h3>
+								<span class="product-price"> $3,900.00 </span>
+							</a>
+							<button class="btn">add to cart</button>
+						</div>
+					</div>
+					<div class="col-7">
+						<div class="row">
+							<div class="col-6">
+								<div class="product-card">
+									<a href="#">
+										<div class="product-card-img">
+											<img src="./images/b2.png" alt="" />
+										</div>
+										<h3 class="product-name">norco youth bicyle</h3>
+										<span class="product-price"> $3,900.00 </span>
+									</a>
+									<button class="btn">add to cart</button>
+								</div>
+							</div>
+							<div class="col-6">
+								<div class="product-card">
+									<a href="#">
+										<div class="product-card-img">
+											<img src="./images/MTBROMO_N7_2022.png" alt="" />
+										</div>
+										<h3 class="product-name">mt bromo n7</h3>
+										<span class="product-price"> $3,900.00 </span>
+									</a>
+									<button class="btn">add to cart</button>
+								</div>
+							</div>
+							<div class="col-6">
+								<div class="product-card">
+									<a href="#">
+										<div class="product-card-img">
+											<img src="./images/b1.png" alt="" />
+										</div>
+										<h3 class="product-name">haibike xduro rx</h3>
+										<span class="product-price"> $3,900.00 </span>
+									</a>
+									<button class="btn">add to cart</button>
+								</div>
+							</div>
+							<div class="col-6">
+								<div class="product-card">
+									<a href="#">
+										<div class="product-card-img">
+											<img src="./images/531352.png" alt="" />
+										</div>
+										<h3 class="product-name">polygon</h3>
+										<span class="product-price"> $3,900.00 </span>
+									</a>
+									<button class="btn">add to cart</button>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!-- End new arrivals section -->
 		<script src="./app.js"></script>
 	</body>
 </html>
