--- a/index.html
+++ b/index.html
@@ -256,6 +256,20 @@
 			</div>
 		</div>
 		<!-- End new arrivals section -->
+
+		<!-- Special bike -->
+		<div class="section special-section">
+			<div class="section-title">
+				<h3 class="second-title">best seller</h3>
+				<h3 class="main-title">xtrada hardtail</h3>
+				<div class="special-price">$1,099.00</div>
+				<a href="#" class="btn">buy now</a>
+			</div>
+			<div class="special-img">
+				<img src="./images/6489548.png" alt="" />
+			</div>
+		</div>
+		<!-- End special bike -->
 		<script src="./app.js"></script>
 	</body>
 </html>
