5. Done: Popular section and New section. Design it with css

--- a/index.html
+++ b/index.html
@@ -263,13 +263,225 @@
 				<h3 class="second-title">best seller</h3>
 				<h3 class="main-title">xtrada hardtail</h3>
 				<div class="special-price">$1,099.00</div>
-				<a href="#" class="btn">buy now</a>
+				<a href="#" class="btn">buy now</a>s
 			</div>
 			<div class="special-img">
 				<img src="./images/6489548.png" alt="" />
 			</div>
 		</div>
 		<!-- End special bike -->
+
+		<!-- Popular section -->
+		<div class="section">
+			<div class="section-title">
+				<h3 class="second-title">customer choise</h3>
+				<h3 class="main-title">popular bikes</h3>
+				<div class="btn-wrapper">
+					<a href="#" class="btn">view all bikes</a>
+				</div>
+			</div>
+			<div class="section-content">
+				<div class="row">
+					<div class="col-3">
+						<div class="product-card">
+							<a href="#">
+								<div class="product-card-img">
+									<img src="./images/531352.png" alt="" />
+								</div>
+								<h3 class="product-name">polygon siskiu</h3>
+								<span class="product-price"> $3,900.00 </span>
+							</a>
+							<button class="btn">add to cart</button>
+						</div>
+					</div>
+					<div class="col-3">
+						<div class="product-card">
+							<a href="#">
+								<div class="product-card-img">
+									<img src="./images/6489548.png" alt="" />
+								</div>
+								<h3 class="product-name">xtrada hardtail</h3>
+								<span class="product-price"> $3,900.00 </span>
+							</a>
+							<button class="btn">add to cart</button>
+						</div>
+					</div>
+					<div class="col-3">
+						<div class="product-card">
+							<a href="#">
+								<div class="product-card-img">
+									<img src="./images/Polygon Cascade.png" alt="" />
+								</div>
+								<h3 class="product-name">Polygon Cascade</h3>
+								<span class="product-price"> $3,900.00 </span>
+							</a>
+							<button class="btn">add to cart</button>
+						</div>
+					</div>
+					<div class="col-3">
+						<div class="product-card">
+							<a href="#">
+								<div class="product-card-img">
+									<img src="./images/b2.png" alt="" />
+								</div>
+								<h3 class="product-name">norco youth bicyle</h3>
+								<span class="product-price"> $3,900.00 </span>
+							</a>
+							<button class="btn">add to cart</button>
+						</div>
+					</div>
+					<div class="col-3">
+						<div class="product-card">
+							<a href="#">
+								<div class="product-card-img">
+									<img src="./images/MTBROMO_N7_2022.png" alt="" />
+								</div>
+								<h3 class="product-name">mt bromo n7</h3>
+								<span class="product-price"> $3,900.00 </span>
+							</a>
+							<button class="btn">add to cart</button>
+						</div>
+					</div>
+					<div class="col-3">
+						<div class="product-card">
+							<a href="#">
+								<div class="product-card-img">
+									<img src="./images/b1.png" alt="" />
+								</div>
+								<h3 class="product-name">haibike xduro rx</h3>
+								<span class="product-price"> $3,900.00 </span>
+							</a>
+							<button class="btn">add to cart</button>
+						</div>
+					</div>
+					<div class="col-3">
+						<div class="product-card">
+							<a href="#">
+								<div class="product-card-img">
+									<img src="./images/531352.png" alt="" />
+								</div>
+								<h3 class="product-name">polygon siskiu</h3>
+								<span class="product-price"> $3,900.00 </span>
+							</a>
+							<button class="btn">add to cart</button>
+						</div>
+					</div>
+					<div class="col-3">
+						<div class="product-card">
+							<a href="#">
+								<div class="product-card-img">
+									<img src="./images/b2.png" alt="" />
+								</div>
+								<h3 class="product-name">norco youth bicyle</h3>
+								<span class="product-price"> $3,900.00 </span>
+							</a>
+							<button class="btn">add to cart</button>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!-- End popular section -->
+
+		<!-- New section -->
+		<div class="section">
+			<div class="section-title">
+				<h3 class="second-title">bikes new</h3>
+				<h3 class="main-title">lastest new</h3>
+				<div class="btn-wrapper">
+					<a href="#" class="btn">view all news</a>
+				</div>
+			</div>
+			<div class="section-content">
+				<div class="row">
+					<div class="col-4">
+						<div class="news-card">
+							<a href="#" class="news-card-img">
+								<div class="img-wrapper">
+									<div
+										class="img"
+										style="
+											background-image: url(./images/portuguese-gravity-MLbsn2aQfQs-unsplash.jpg);
+										"
+									></div>
+								</div>
+							</a>
+							<h3 class="news-title">
+								<a href="#">
+									Cycling On Your Period: Harness The Power Of Your Hormones
+								</a>
+							</h3>
+							<p class="news-preview">
+								Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+								eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+								enim ad minim veniam, quis nostrud exercitation ullamco laboris
+								nisi ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit
+								amet, consectetur adipiscing elit, sed do eiusmod tempor
+								incididunt ut labore et dolore magna aliqua.
+							</p>
+							<a href="#" class="btn">Read more</a>
+						</div>
+					</div>
+					<div class="col-4">
+						<div class="news-card">
+							<a href="#" class="news-card-img">
+								<div class="img-wrapper">
+									<div
+										class="img"
+										style="
+											background-image: url(./images/asoggetti-HPpj2190tGs-unsplash.jpg);
+										"
+									></div>
+								</div>
+							</a>
+							<h3 class="news-title">
+								<a href="#">
+									Cycling On Your Period: Harness The Power Of Your Hormones
+								</a>
+							</h3>
+							<p class="news-preview">
+								Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+								eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+								enim ad minim veniam, quis nostrud exercitation ullamco laboris
+								nisi ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit
+								amet, consectetur adipiscing elit, sed do eiusmod tempor
+								incididunt ut labore et dolore magna aliqua.
+							</p>
+							<a href="#" class="btn">Read more</a>
+						</div>
+					</div>
+					<div class="col-4">
+						<div class="news-card">
+							<a href="#" class="news-card-img">
+								<div class="img-wrapper">
+									<div
+										class="img"
+										style="
+											background-image: url(./images/paolo-chiabrando-KSwd2lb3lfs-unsplash.jpg);
+										"
+									></div>
+								</div>
+							</a>
+							<h3 class="news-title">
+								<a href="#">
+									Cycling On Your Period: Harness The Power Of Your Hormones
+								</a>
+							</h3>
+							<p class="news-preview">
+								Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+								eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+								enim ad minim veniam, quis nostrud exercitation ullamco laboris
+								nisi ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit
+								amet, consectetur adipiscing elit, sed do eiusmod tempor
+								incididunt ut labore et dolore magna aliqua.
+							</p>
+							<a href="#" class="btn">Read more</a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!-- End new section -->
 		<script src="./app.js"></script>
 	</body>
 </html>
